objects/Digital_Blacklist_or_CompetitorList__c.object
<CustomObject>
    <description>This object is to cover blacklist/competitor list entries</description>
    <fields>
        <fullName>Email_Domains__c</fullName>
        <label>Email Domains</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Other_Reason__c</fullName>
        <description>created for ent trial DPS-20824</description>
        <label>Other Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>created for ent trial DPS-20824</description>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bad Credit</fullName>
                </value>
                <value>
                    <fullName>By Request of Account Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Trial Abuser</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>Unblocked</fullName>
                </value>
                <value>
                    <fullName>Whitelisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blacklist</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Digital Blacklist or CompetitorList</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email__c</columns>
        <columns>Email_Domains__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Digital Blacklist or CompetitorList Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Digital Blacklist or CompetitorLists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Omni_Blocked_Reason_Check</fullName>
        <active>true</active>
        <description>Created for Enterprise Trial as part of DPS-20824</description>
        <errorConditionFormula>AND(
ISPICKVAL( Reason__c,&quot;&quot;),
ISPICKVAL (Status__c,&apos;Blocked&apos;)
)</errorConditionFormula>
        <errorDisplayField>Reason__c</errorDisplayField>
        <errorMessage>If Status is &apos;Blocked&apos;, Reason should be provided</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Omni_Other_Reason_Check</fullName>
        <active>true</active>
        <description>Created for Enterprise Trial as part of DPS-20824</description>
        <errorConditionFormula>AND (
ISPICKVAL (Reason__c, &apos;Other&apos;),
ISBLANK(Other_Reason__c)
)</errorConditionFormula>
        <errorDisplayField>Other_Reason__c</errorDisplayField>
        <errorMessage>When Reason is &apos;Other&apos;, please provide Other Reason</errorMessage>
    </validationRules>
</CustomObject>